# mpg-to-kml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: mpg_to_kml.py
src/mpg_to_kml/: __init__.py
src/mpg_to_kml/calculator/: __init__.py  fuel_cost.py
src/mpg_to_kml/cli/: __init__.py  main.py
src/mpg_to_kml/conversion/: __init__.py  converter.py
src/mpg_to_kml/pricing/: __init__.py  recope.py
tests/: __init__.py  test_cli_main.py  test_converter.py  test_fuel_cost.py  test_recope.py
